--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: ap-southeast-1
-  bucket: prop-listing-development
+  region: us-east-2
+  bucket: property-findit
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
