--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= ENV['S3_ACCESS_KEY'] %>
-  secret_access_key: <%= ENV['S3_SECRET_KEY'] %>
-  region: us-west-2
-  bucket: propertylisting88
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: us-east-2
+  bucket: property-findit
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
